update with 6 changes

--- a/note/git-special-usage.html
+++ b/note/git-special-usage.html
@@ -6,9 +6,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>Git의 특별한 사용법 - Seorenn Note</title>
-<meta name="twitter:title" content="Git의 특별한 사용법" />
-<meta name="og:title" content="Git의 특별한 사용법" />
+<title>Git 약간 특별한 사용법 - Seorenn Note</title>
+<meta name="twitter:title" content="Git 약간 특별한 사용법" />
+<meta name="og:title" content="Git 약간 특별한 사용법" />
 <meta name="description" content="Git의 약간은 특별한 기능들을 살펴보는 글" />
 <meta name="twitter:description" content="Git의 약간은 특별한 기능들을 살펴보는 글" />
 <meta name="og:description" content="Git의 약간은 특별한 기능들을 살펴보는 글" />
@@ -54,7 +54,7 @@
 </div>
 <section class="content">
 <header>
-<h1>Git의 특별한 사용법</h1>
+<h1>Git 약간 특별한 사용법</h1>
 <div class="title-date">2020년 6월 23일 수정</div>
 </header>
 <div id="table-of-contents">
@@ -299,14 +299,14 @@ apply 명령을 통해 현재 브랜치에 간단히 패치를 적용할 수 있
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/git-config.html">Git 설정하기</a></h2>
+<h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
+<h2><a class="article-link-title" href="/note/git-config.html">Git 설정하기</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
 </div>
