--- a/note/git.html
+++ b/note/git.html
@@ -76,7 +76,7 @@ Git은 현존하는 가장 대표적인 DVCS(Distributed Version Control System)
 <div class="outline-text-2" id="text-867ded23">
 <ul class="org-ul">
 <li><a href="git-basic-usage.html">Git 일반적인 사용법</a></li>
-<li><a href="git-special-usage.html">Git의 특별한 사용법</a></li>
+<li><a href="git-special-usage.html">Git 약간 특별한 사용법</a></li>
 <li><a href="git-config.html">Git 설정하기</a></li>
 </ul>
 </div>
@@ -107,7 +107,7 @@ Git은 현존하는 가장 대표적인 DVCS(Distributed Version Control System)
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/git-special-usage.html">Git의 특별한 사용법</a></h2>
+<h2><a class="article-link-title" href="/note/git-special-usage.html">Git 약간 특별한 사용법</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
 </div>
