--- a/note/index.html
+++ b/note/index.html
@@ -56,14 +56,7 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/git-special-usage.html">Git의 특별한 사용법</a></h2>
-<div class="article-link-date">
-2020년 6월 23일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/git-config.html">Git 설정하기</a></h2>
+<h2><a class="article-link-title" href="/note/git-special-usage.html">Git 약간 특별한 사용법</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
 </div>
@@ -71,6 +64,13 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
+<div class="article-link-date">
+2020년 6월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/git-config.html">Git 설정하기</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
 </div>
