--- a/note/apple.html
+++ b/note/apple.html
@@ -41,9 +41,7 @@
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" alt="Seorenn" /></a>
 <nav>
 <a href="/" title="Home"><i class="material-icons md-light">home</i></a>
-<a href="/post" title="Post"><i class="material-icons md-light">subject</i></a>
- <a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
- <a href="/log" title="Log"><i class="material-icons md-light">portrait</i></a>
+<a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
 </nav>
 </div>
 </header>
@@ -162,9 +160,16 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/wwdc2020.html">WWDC 2020</a></h2>
+<div class="article-link-date">
+2020년 6월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <div class="article-link-date">
-2020년 6월 19일 수정</div>
+2020년 6월 21일 수정</div>
 </div>
 </div>
 <div class="article-link">
