--- a/note/wwdc.html
+++ b/note/wwdc.html
@@ -6,14 +6,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>사파리 - Seorenn Note</title>
-<meta name="twitter:title" content="사파리" />
-<meta name="og:title" content="사파리" />
-<meta name="description" content="사파리(Safari) 웹 브라우저" />
-<meta name="twitter:description" content="사파리(Safari) 웹 브라우저" />
-<meta name="og:description" content="사파리(Safari) 웹 브라우저" />
-<link rel="canonical" href="https://seorenn.github.io/note/safari.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/safari.html" />
+<title>WWDC - Seorenn Note</title>
+<meta name="twitter:title" content="WWDC" />
+<meta name="og:title" content="WWDC" />
+<meta name="description" content="애플이 매년 개최하는 개발자 행사" />
+<meta name="twitter:description" content="애플이 매년 개최하는 개발자 행사" />
+<meta name="og:description" content="애플이 매년 개최하는 개발자 행사" />
+<link rel="canonical" href="https://seorenn.github.io/note/wwdc.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/wwdc.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -54,57 +54,19 @@
 </div>
 <section class="content">
 <header>
-<h1>사파리</h1>
-<div class="title-date">2020년 5월 28일 수정</div>
+<h1>WWDC</h1>
+<div class="title-date">2020년 6월 23일 수정</div>
 </header>
-<blockquote>
 <p>
-사파리는 야생 동물을 구경하는 관광 상품이기도 하지만,
-여기서는 웹 브라우저인 사파리를 다룬다.
-</p>
-</blockquote>
-
-<p>
-사파리(Safari)는 <a href="apple.html">애플</a>에서 제작한 <a href="macos.html">macOS</a> 및 <a href="ios.html">iOS</a>용 웹 브라우저다.
-원래는 윈도도 지원했으니 사실상 사용자가 거의 없어져서 어느 순간 지원이 끊어졌다고 생각된다.
+WWDC는 World Wide Developer Conference 즉 국제 개발자 콘퍼런스의 약자다. 이름처럼 개발자를 위한 행사이다.
 </p>
 
 <p>
-<a href="macos.html">macOS</a>나 <a href="ios.html">iOS</a> 양쪽 다
-사파리의 렌더링 엔진이나 스크립트 엔진이 거의 동일해서
-한 쪽에서 문제가 보이면 다른 쪽에서도 동일한 문제가 보일 정도로 비슷하다.
-따라서 사파리 유저를 판단할 때는 <a href="macos.html">macOS</a>와 <a href="ios.html">iOS</a> 사용자를 동시에 판단해야 한다.
+개발자를 위한 행사이긴 하나 첫 날에는 키노트가 열리며 여기서는 주로 소프트웨어에 대한 새로운 정보와 함께 맥 제품군이나 아이패드 등의 아이폰을 제외한 디바이스의 발표도 간혹 이루어진다. 따라서 이 키노트는 전 세계와 기자(?)들의 이목이 집중된다.
 </p>
 
 <p>
-구글의 <a href="chrome.html">크롬</a>과 비교했을 때 상대적으로 느리면서 가볍다.
-이상한 말 같지만, <a href="chrome.html">크롬</a>이 빠른 것에 비해 사파리는 스크립트 엔진이 상대적으로 느린데,
-대신 스크립트가 점유하는 CPU의 양은 적은 편이다.
-다르게 말해서 사파리의 스크립트 엔진에 멀티 프로세싱을 상당히 배려하는 편이다.
-</p>
-
-<p>
-이는 배터리 소모량으로도 판단이 가능한데,
-결과적으로 <a href="chrome.html">크롬</a>에 비해 사파리는 메모리도 적게 먹고 CPU도 적게 차지한다.
-맥북을 배터리로 쓴다면 <a href="chrome.html">크롬</a> 보다는 사파리를 쓰는 것이 확실히 효율적이다.
-유튜브를 시청할 경우에는 특히 심한 차이가 난다.
-</p>
-
-<p>
-대신 현재의 웹 사이트들은 <a href="chrome.html">크롬</a>을 기준으로 만들어진다는 큰 문제가 있어서
-가끔 사파리에서 문제가 생기는 사이트가 존재하기도 한다.
-</p>
-
-<blockquote>
-<p>
-크롬의 경우 과거 IE와 비슷하게 독점 상황을 경계해야 할 정도로 사용자가 몰려있다는 현실적인 문제가 있다.
-</p>
-</blockquote>
-
-<p>
-렌더링 엔진은 WebKit이라는 오픈소스 프로젝트를 기반으로 작성되었다.
-그런데 WebKit은 <a href="apple.html">애플</a>이 지원하는 프로젝트 인데다
-이제는 <a href="apple.html">애플</a>이 주로 쓰고 있어서 사실상 <a href="apple.html">애플</a> 거라고 봐도 될 정도다.
+이 외의 발표들은 대부분 개발자들을 위한 전문적인 내용들이라 기자들에게 소외(?)를 당하지만 역시 개발자들에게는 알짜베기 발표가 많다.
 </p>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
@@ -124,13 +86,6 @@
 <h2><a class="article-link-title" href="/note/wwdc2020.html">WWDC 2020</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/chrome.html">크롬</a></h2>
-<div class="article-link-date">
-2020년 5월 28일 수정</div>
 </div>
 </div>
 </div>
