update with 5 changes

--- a/note/wwdc.html
+++ b/note/wwdc.html
@@ -57,6 +57,13 @@
 <h1>WWDC</h1>
 <div class="title-date">2020년 6월 23일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#867ded23">관련글</a></li>
+</ul>
+</div>
+</div>
 <p>
 WWDC는 World Wide Developer Conference 즉 국제 개발자 콘퍼런스의 약자다. 이름처럼 개발자를 위한 행사이다.
 </p>
@@ -68,6 +75,15 @@ WWDC는 World Wide Developer Conference 즉 국제 개발자 콘퍼런스의 약
 <p>
 이 외의 발표들은 대부분 개발자들을 위한 전문적인 내용들이라 기자들에게 소외(?)를 당하지만 역시 개발자들에게는 알짜베기 발표가 많다.
 </p>
+
+<div id="outline-container-867ded23" class="outline-2">
+<h2 id="867ded23">관련글</h2>
+<div class="outline-text-2" id="text-867ded23">
+<ul class="org-ul">
+<li><a href="wwdc2020.html">WWDC 2020</a></li>
+</ul>
+</div>
+</div>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
      style="display:block"
