--- a/note/wwdc.html
+++ b/note/wwdc.html
@@ -65,7 +65,7 @@
 </div>
 </div>
 <p>
-WWDC는 World Wide Developer Conference 즉 국제 개발자 콘퍼런스의 약자다. 이름처럼 개발자를 위한 행사이다.
+WWDC는 <a href="apple.html">애플</a>에서 개최하는 World Wide Developer Conference 즉 국제 개발자 콘퍼런스의 약자다. 이름처럼 개발자를 위한 행사이다.
 </p>
 
 <p>
