update with 1 changes

--- a/note/wwdc2020.html
+++ b/note/wwdc2020.html
@@ -86,7 +86,7 @@
 </p>
 
 <p>
-이 외에 앱 클립(App Clip)을 통한 빠른 앱 접근, 번역 지원 추가, 메시지와 관련된 개선사항들, 지도와 카 플레이 개선, Siri 개선 등 몇 가지 보조적인 개선이 이뤄진 것 같다.
+이 외에 동영상을 화면에 작게 띄우는 PIP(Picture in Picture) 지원 추가, 앱 클립(App Clip)을 통한 빠른 앱 접근, 번역 지원 추가, 메시지와 관련된 개선사항들, 지도와 카 플레이 개선, Siri 개선 등 몇 가지 보조적인 개선이 이뤄진 것 같다.
 </p>
 
 <p>
