--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/x86.html">x86</a></h2>
+<div class="article-link-date">
+2020년 6월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/wwdc.html">WWDC</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
@@ -254,13 +261,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
-<div class="article-link-date">
-2020년 6월 19일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs-troubleshooting.html">Doom Emacs 문제 해결</a></h2>
 <div class="article-link-date">
 2020년 6월 19일 수정</div>
 </div>
