--- a/note/index.html
+++ b/note/index.html
@@ -63,6 +63,13 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/x86.html">x86</a></h2>
+<div class="article-link-date">
+2020년 6월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/wwdc.html">WWDC</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
