update with 4 changes

--- a/note/x86.html
+++ b/note/x86.html
@@ -58,7 +58,7 @@
 <div class="title-date">2020년 6월 23일 수정</div>
 </header>
 <p>
-x86은 보통 인텔(Intel) 혹은 AMD의 CPU 칩셋 혹은 아키텍처를 의미하거나, 혹은 이런 칩을 위한 OS에서 동작하는 애플리케이션(어플)이 인텔이나 AMD 칩셋과 호환되게 빌드되어 있냐를 위한 자주 표현되는 단어다.
+x86은 보통 인텔(Intel) 혹은 AMD의 CPU 칩셋 혹은 아키텍처를 의미하거나, 혹은 이런 칩을 위한 OS에서 동작하는 애플리케이션(어플)인지를 표현하기 위해 종종 사용되는 단어다.
 </p>
 
 <p>
