update with 6 changes

--- a/note/wwdc2020.html
+++ b/note/wwdc2020.html
@@ -106,7 +106,7 @@ iPadOS에서 소개된 것으로 통화 팝업이 푸시처럼 화면 상단에 
 </p>
 
 <p>
-그밖에 펜슬 입력이 자동으로 폴리곤으로 바뀌는 것이나 Siri의 개선 등이 포함되었다.
+그밖에 펜슬 입력이 자동으로 글자나 폴리곤으로 바뀌는 것이나 Siri의 개선 등이 포함되었다.
 </p>
 </div>
 </div>
