update with 12 changes

--- a/note/nextstep.html
+++ b/note/nextstep.html
@@ -41,9 +41,7 @@
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" alt="Seorenn" /></a>
 <nav>
 <a href="/" title="Home"><i class="material-icons md-light">home</i></a>
-<a href="/post" title="Post"><i class="material-icons md-light">subject</i></a>
- <a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
- <a href="/log" title="Log"><i class="material-icons md-light">portrait</i></a>
+<a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
 </nav>
 </div>
 </header>
@@ -57,7 +55,7 @@
 <section class="content">
 <header>
 <h1>NeXTSTEP</h1>
-<div class="title-date">2020년 5월 21일 수정</div>
+<div class="title-date">2020년 6월 23일 수정</div>
 </header>
 <p>
 <a href="apple.html">애플</a> 공동 설립자인 스티브 잡스가 설립한 회사인 NeXT에서 만든 OS다.
@@ -76,7 +74,7 @@ GUI 운영체제로써 완성도가 제법 높아서 GUI 설계 조차 <a href="
 </p>
 
 <p>
-OS X이나 <a href="macos.html">macOS</a>의 전신인 만큼,
+OS X와 <a href="macos.html">macOS</a>의 전신인 만큼,
 이들 최신 OS의 개발 프레임워크를 보면 많은 유산이 남아있다.
 특히 Cocoa(AppKit)나 Cocoa Touch(UIKit) 쪽의 클래스들이 전부 <code>NS</code> 라는 이름으로 시작한다는 것이 가장 인상에 남는다.
 물론 NS는 NeXTSTEP의 약자임을 쉽게 알 수 있다.
@@ -99,7 +97,7 @@ OS X이나 <a href="macos.html">macOS</a>의 전신인 만큼,
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
 <div class="article-link-date">
-2020년 6월 16일 수정</div>
+2020년 6월 23일 수정</div>
 </div>
 </div>
 <div class="article-link">
