--- a/note/shell.html
+++ b/note/shell.html
@@ -41,9 +41,7 @@
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" alt="Seorenn" /></a>
 <nav>
 <a href="/" title="Home"><i class="material-icons md-light">home</i></a>
-<a href="/post" title="Post"><i class="material-icons md-light">subject</i></a>
- <a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
- <a href="/log" title="Log"><i class="material-icons md-light">portrait</i></a>
+<a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
 </nav>
 </div>
 </header>
@@ -86,6 +84,13 @@
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/xcode-tips.html">Xcode 팁 모음</a></h2>
+<div class="article-link-date">
+2020년 6월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
@@ -117,13 +122,6 @@
 <h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
 <div class="article-link-date">
 2020년 6월 1일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
-<div class="article-link-date">
-2020년 5월 29일 수정</div>
 </div>
 </div>
 <div class="article-link">
