update with 7 changes

--- a/note/wwdc2020.html
+++ b/note/wwdc2020.html
@@ -9,9 +9,9 @@
 <title>WWDC 2020 - Seorenn Note</title>
 <meta name="twitter:title" content="WWDC 2020" />
 <meta name="og:title" content="WWDC 2020" />
-<meta name="description" content="WWDC 2020 간단 정리" />
-<meta name="twitter:description" content="WWDC 2020 간단 정리" />
-<meta name="og:description" content="WWDC 2020 간단 정리" />
+<meta name="description" content="WWDC 2020(WWDC20) 키노트 정리" />
+<meta name="twitter:description" content="WWDC 2020(WWDC20) 키노트 정리" />
+<meta name="og:description" content="WWDC 2020(WWDC20) 키노트 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/wwdc2020.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/wwdc2020.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
