--- a/note/macos.html
+++ b/note/macos.html
@@ -227,6 +227,13 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rsync.html">rsync</a></h2>
+<div class="article-link-date">
+2020년 6월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/wwdc2020.html">WWDC 2020</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
