update with 4 changes

--- a/note/sync-dirs-with-rsync.html
+++ b/note/sync-dirs-with-rsync.html
@@ -62,6 +62,7 @@
 <ul>
 <li><a href="#8888422c">결론부터</a></li>
 <li><a href="#4e37c3af">옵션 소개</a></li>
+<li><a href="#7f598db0">기타</a></li>
 </ul>
 </div>
 </div>
@@ -92,11 +93,19 @@
 </p>
 <dl class="org-dl">
 <dt><code>-a</code></dt><dd>Archive 모드다. 즉 파일의 모든 정보나 심볼릭 링크 등 파일과 관련된 메타데이터까지 완벽하게 복제하는 모드다. 시간 시간으로 변경 여부를 파악하려면 꼭 필요하다. <code>--archive</code> 와 동일하다.</dd>
-<dt><code>-u</code></dt><dd>수정 시간을 비교해서 목적지의 파일이 더 최신이면 복제하지 않는다. 즉 수정된 파일만 복제하겠다면 꼭 필요한 옵션이다. <code>--update</code> 와 동일하다.</dd>
+<dt><code>-u</code></dt><dd>시간을 비교해서 목적지의 파일이 더 최신이면 복제하지 않는다. 즉 수정된 파일만 복제하겠다면 꼭 필요한 옵션이다. <code>--update</code> 와 동일하다.</dd>
 <dt><code>-r</code></dt><dd>Recursive 즉 하위 디렉터리도 몽땅 복제한다. 만약 하위 디렉터리가 없다면 빼도 관계는 없다. <code>--recursive</code> 와 동일하다.</dd>
 </dl>
 <p>
 즉 파일 시간을 기준으로 바뀌거나 혹은 새로 추가된 파일만 원격지에 복사하는 옵션을 사용하고 있다.
+</p>
+</div>
+</div>
+<div id="outline-container-7f598db0" class="outline-2">
+<h2 id="7f598db0">기타</h2>
+<div class="outline-text-2" id="text-7f598db0">
+<p>
+만약 내용물의 변경을 꼭 체크해야 한다면 <code>-c</code> 혹은 <code>--checksum</code> 옵션을 참고하자. 이 옵션은 사이즈나 시간이 아니라 파일의 내용을 체크섬을 떠서 내용물이 변경 되었는지를 비교한다.
 </p>
 </div>
 </div>
