update with 5 changes

--- a/note/rsync.html
+++ b/note/rsync.html
@@ -57,6 +57,13 @@
 <h1>rsync</h1>
 <div class="title-date">2020년 6월 23일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#867ded23">관련글</a></li>
+</ul>
+</div>
+</div>
 <p>
 rsync는 remote sync의 약자로 두 원격지의 디렉터리를 동기화 하는데 사용하는 <a href="cli.html">CLI</a> 도구다. 그냥 복사만 하는 것이 아니라 효율적으로 전송하기 위해 압축 기술을 사용한다. 타임스탬프를 활용해 이후에 수정된 파일만 복사하거나 혹은 체크섬을 활용해 변경된 파일만 복제하는 것도 허용한다.
 </p>
@@ -68,6 +75,15 @@ rsync는 remote sync의 약자로 두 원격지의 디렉터리를 동기화 하
 <p>
 리눅스를 비롯한 <code>*NIX</code> 운영체제에서 대체로 기본 제공되며 <a href="macos.html">macOS</a>에서도 별 다른 설치 없이 사용할 수 있다.
 </p>
+
+<div id="outline-container-867ded23" class="outline-2">
+<h2 id="867ded23">관련글</h2>
+<div class="outline-text-2" id="text-867ded23">
+<ul class="org-ul">
+<li><a href="sync-dirs-with-rsync.html">rsync로 두 디렉터리 동기화하기</a></li>
+</ul>
+</div>
+</div>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
      style="display:block"
