update with 4 changes

--- a/note/sync-dirs-with-rsync.html
+++ b/note/sync-dirs-with-rsync.html
@@ -92,7 +92,7 @@
 여기서 사용한 <code>-aur</code> 옵션은 아래의 세 가지 옵션이 합쳐진 것이다.
 </p>
 <dl class="org-dl">
-<dt><code>-a</code></dt><dd>Archive 모드다. 즉 파일의 모든 정보나 심볼릭 링크 등 파일과 관련된 메타데이터까지 완벽하게 복제하는 모드다. 시간 시간으로 변경 여부를 파악하려면 꼭 필요하다. <code>--archive</code> 와 동일하다.</dd>
+<dt><code>-a</code></dt><dd>Archive 모드다. 즉 파일의 모든 정보나 심볼릭 링크 등 파일과 관련된 메타데이터까지 완벽하게 복제하는 모드다. 시간으로 변경 여부를 파악하려면 꼭 필요하다. <code>--archive</code> 와 동일하다.</dd>
 <dt><code>-u</code></dt><dd>시간을 비교해서 목적지의 파일이 더 최신이면 복제하지 않는다. 즉 수정된 파일만 복제하겠다면 꼭 필요한 옵션이다. <code>--update</code> 와 동일하다.</dd>
 <dt><code>-r</code></dt><dd>Recursive 즉 하위 디렉터리도 몽땅 복제한다. 만약 하위 디렉터리가 없다면 빼도 관계는 없다. <code>--recursive</code> 와 동일하다.</dd>
 </dl>
