--- a/note/seo-strategy.html
+++ b/note/seo-strategy.html
@@ -41,9 +41,7 @@
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" alt="Seorenn" /></a>
 <nav>
 <a href="/" title="Home"><i class="material-icons md-light">home</i></a>
-<a href="/post" title="Post"><i class="material-icons md-light">subject</i></a>
- <a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
- <a href="/log" title="Log"><i class="material-icons md-light">portrait</i></a>
+<a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
 </nav>
 </div>
 </header>
@@ -57,7 +55,7 @@
 <section class="content">
 <header>
 <h1>SEO를 위한 전략</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 6월 23일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -158,7 +156,7 @@
 </p>
 
 <p>
-그 외에 요즘은 모바일 반응성을 레이지 랭크 요소로 다루는 경향도 있다고 한다. 예를 들어 구글의 경우 모바일 지원 여부 즉, 모바일에서 보기 좋게 페이지가 표시되는지 혹은 모바일에서 너무 느리지는 않는지 등이 페이지 랭크에 관여한다는 의미다.
+그 외에 요즘은 모바일 반응성을 페이지 랭크 요소로 다루는 경향도 있다고 한다. 예를 들어 구글의 경우 모바일 지원 여부 즉, 모바일에서 보기 좋게 페이지가 표시되는지 혹은 모바일에서 너무 느리지는 않는지 등이 페이지 랭크에 관여한다는 의미다.
 </p>
 
 <p>
