update with 7 changes

--- a/note/seo-strategy.html
+++ b/note/seo-strategy.html
@@ -160,7 +160,7 @@
 </p>
 
 <p>
-불행히도 이 외에 페이지 랭크를 결정하는 기준는 검색엔진 마다 다르므로 딱 뭐다 라고 정리할 수 있 없다. 즉 영업 비밀일테니 더 알아내려는 것은 포기하자.
+불행히도 이 외에 페이지 랭크를 결정하는 기준은 검색엔진 마다 다르므로 딱 뭐다 라고 정리할 수 있 없다. 즉 영업 비밀일테니 더 알아내려는 것은 포기하자.
 </p>
 </div>
 </div>
