--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/mozjpeg.html">MozJPEG</a></h2>
+<div class="article-link-date">
+2020년 6월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/mozjpeg-compress-jpeg-images.html">MozJPEG으로 JPEG 이미지 압축하기</a></h2>
+<div class="article-link-date">
+2020년 6월 23일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/wwdc2020.html">WWDC 2020</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
