update with 6 changes

--- a/note/wwdc.html
+++ b/note/wwdc.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>WWDC</h1>
-<div class="title-date">2020년 6월 23일 수정</div>
+<div class="title-date">2020년 6월 24일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -80,7 +80,7 @@ WWDC는 <a href="apple.html">애플</a>에서 개최하는 World Wide Developer 
 <h2 id="867ded23">관련글</h2>
 <div class="outline-text-2" id="text-867ded23">
 <ul class="org-ul">
-<li><a href="wwdc2020.html">WWDC 2020</a></li>
+<li><a href="wwdc2020.html">WWDC20</a> (2020)</li>
 </ul>
 </div>
 </div>
@@ -99,9 +99,9 @@ WWDC는 <a href="apple.html">애플</a>에서 개최하는 World Wide Developer 
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/wwdc2020.html">WWDC 2020</a></h2>
+<h2><a class="article-link-title" href="/note/wwdc2020.html">WWDC20</a></h2>
 <div class="article-link-date">
-2020년 6월 23일 수정</div>
+2020년 6월 24일 수정</div>
 </div>
 </div>
 </div>
