update with 11 changes

--- a/note/python.html
+++ b/note/python.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Python</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 6월 24일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -292,6 +292,7 @@ Python 3 부터 사용 가능한 커맨드다.
 <ul class="org-ul">
 <li><a href="python-list-comprehension.html">Python List Comprehension</a></li>
 <li><a href="python-regular-expression.html">Python 정규표현식</a></li>
+<li><a href="python-exception-handling.html">Python 예외 처리</a></li>
 <li><a href="python3-manual-migration.html">Python 3로 수동으로 옮겨가기</a></li>
 </ul>
 </div>
@@ -328,6 +329,13 @@ Python 3 부터 사용 가능한 커맨드다.
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-exception-handling.html">Python 예외 처리</a></h2>
+<div class="article-link-date">
+2020년 6월 24일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/celery.html">Celery</a></h2>
