--- a/note/swiftui.html
+++ b/note/swiftui.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>SwiftUI</h1>
-<div class="title-date">2020년 6월 23일 수정</div>
+<div class="title-date">2020년 6월 24일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -255,6 +255,26 @@ ZStack은 UI를 바닥부터 쌓아 가는 형태로 만들 때 사용한다.
 <p>
 style에는 이 외에 <code>.date</code>, <code>.time</code>, <code>.timer</code> 등 다양한 옵션이 있다.
 </p>
+
+<p>
+속성을 넣는 방법도 생긴 것 같다.
+</p>
+<div class="org-src-container">
+<pre class="src src-swift"><span style="color: #c678dd;">Text</span>(<span style="color: #98be65;">"\(</span><span style="color: #c678dd;">Text</span>(name).<span style="color: #c678dd;">bold</span>()<span style="color: #98be65;">) foo bar"</span>)
+</pre>
+</div>
+<p>
+인터폴레이션으로 Text 오브젝트를 처리할 수 있나보다.
+</p>
+
+<p>
+비슷하게 이미지를 넣을 수 있는 방법도 최근 도입된 것 같다.
+</p>
+<div class="org-src-container">
+<pre class="src src-swift"><span style="color: #c678dd;">Text</span>(<span style="color: #98be65;">"\(</span><span style="color: #c678dd;">Image</span>(systemNamed: <span style="color: #98be65;">"music.mic"</span>)<span style="color: #98be65;">) foo bar"</span>)
+.<span style="color: #c678dd;">font</span>(.<span style="color: #c678dd;">custom</span>(<span style="color: #98be65;">"FontName"</span>, size: <span style="color: #da8548; font-weight: bold;">15</span>))
+</pre>
+</div>
 </div>
 </div>
 <div id="outline-container-87b7760f" class="outline-3">
