update with 1 changes

--- a/note/python-exception-handling.html
+++ b/note/python-exception-handling.html
@@ -9,9 +9,9 @@
 <title>Python 예외 처리 - Seorenn Note</title>
 <meta name="twitter:title" content="Python 예외 처리" />
 <meta name="og:title" content="Python 예외 처리" />
-<meta name="description" content="파이썬의 예외 처리 방법 기초" />
-<meta name="twitter:description" content="파이썬의 예외 처리 방법 기초" />
-<meta name="og:description" content="파이썬의 예외 처리 방법 기초" />
+<meta name="description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등을 알아보자" />
+<meta name="twitter:description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등을 알아보자" />
+<meta name="og:description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등을 알아보자" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-exception-handling.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-exception-handling.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
