--- a/note/git-special-usage.html
+++ b/note/git-special-usage.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Git 약간 특별한 사용법</h1>
-<div class="title-date">2020년 6월 23일 수정</div>
+<div class="title-date">2020년 6월 25일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -71,6 +71,7 @@
 <li><a href="#77d2d8d6">업데이트 무시하기</a></li>
 <li><a href="#9778452b">원격과 브랜치 동기화 하기</a></li>
 <li><a href="#85d45b36">다른 브랜치간의 변경 내역만 뽑아서 적용하기</a></li>
+<li><a href="#36991e45">로컬의 변경점을 무시하고 원격으로 되돌리기</a></li>
 </ul>
 </div>
 </div>
@@ -281,6 +282,21 @@ fetch 시 <code>--prune</code> 혹은 <code>-p</code> 옵션은 원격에 없는
 </div>
 <p>
 apply 명령을 통해 현재 브랜치에 간단히 패치를 적용할 수 있다.
+</p>
+</div>
+</div>
+<div id="outline-container-36991e45" class="outline-2">
+<h2 id="36991e45">로컬의 변경점을 무시하고 원격으로 되돌리기</h2>
+<div class="outline-text-2" id="text-36991e45">
+<p>
+<code>reset</code> 을 강하게 원격으로 때려버리면(?) 원하는 대로 할 수 있다. 아래 예는 현재 로컬의 브랜치 내용을 원격의 <code>master</code> 브랜치로 일치시키는 커맨드다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash"><span style="color: #ECBE7B;">git</span> reset --hard origin/master
+</pre>
+</div>
+<p>
+뭐 알겠지만 로컬 커밋 내역이 싹 날아갈 수 있으므로 주의하자.
 </p>
 </div>
 </div>
