--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<div class="article-link-date">
+2020년 6월 25일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-file-dir-tips.html">Python으로 파일의 경로 및 목록 다루기</a></h2>
+<div class="article-link-date">
+2020년 6월 25일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/git-special-usage.html">Git 약간 특별한 사용법</a></h2>
 <div class="article-link-date">
 2020년 6월 25일 수정</div>
@@ -71,13 +85,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-exception-handling.html">Python 예외 처리</a></h2>
-<div class="article-link-date">
-2020년 6월 24일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <div class="article-link-date">
 2020년 6월 24일 수정</div>
 </div>
