update with 4 changes

--- a/note/python-file-dir-tips.html
+++ b/note/python-file-dir-tips.html
@@ -140,7 +140,7 @@
 <h2 id="aedb0bf4">디렉터리 안의 파일 목록 얻기</h2>
 <div class="outline-text-2" id="text-aedb0bf4">
 <p>
-여러 방법이 있겠지만 여기서는 <code>os</code> 모듈의 <code>listdir</code> 을 사용한 예제다.
+여러 방법이 있겠지만 여기서는 <code>os</code> 모듈의 <code>listdir</code> 을 사용한 방법을 보자.
 </p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
@@ -154,7 +154,7 @@
 <h2 id="11b77a1a">디렉터리 안의 모든 파일 및 디렉터리 목록 얻기</h2>
 <div class="outline-text-2" id="text-11b77a1a">
 <p>
-특정 디렉터리 안의 내용물을 서브 디렉터리까지 다 포함해서 목록을 구할려면 여러 방법이 있겠지만 여기서는 <a href="python.html">Python</a> 3.4 에서 추가된 <code>pathlib</code> 모듈의 <code>Path</code> 클래스의 <code>rglob()</code> 메서드를 이용해보자.
+특정 디렉터리 안의 내용물을 서브 디렉터리까지 다 포함해서 목록을 구할려면 여러 방법이 있겠지만 이번에는 <a href="python.html">Python</a> 3.4 에서 추가된 <code>pathlib</code> 모듈의 <code>Path</code> 클래스의 <code>rglob()</code> 메서드를 이용해보자.
 </p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">from</span> pathlib <span style="color: #51afef;">import</span> Path
