update with 1 changes

--- a/note/python-file-dir-tips.html
+++ b/note/python-file-dir-tips.html
@@ -182,6 +182,9 @@
 ...
 </pre>
 </div>
+<p>
+참고로 <code>rglob()</code> 의 파일 이름 패턴은 이 외의 다양한 패턴을 지원하므로 궁금하다면 매뉴얼을 찾아보자.
+</p>
 </div>
 </div>
 <div class="mid-ad-container">
