update with 20 changes

--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Doom Emacs</h1>
-<div class="title-date">2020년 6월 19일 수정</div>
+<div class="title-date">2020년 6월 26일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -76,7 +76,7 @@
 <li><a href="#5c0e1c8c">visual-line-mode와 커서 이동</a></li>
 </ul>
 </li>
-<li><a href="#867ded23">관련글</a></li>
+<li><a href="#73ec6cea">주제별 내용</a></li>
 <li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
@@ -309,9 +309,9 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 </div>
 </div>
 </div>
-<div id="outline-container-867ded23" class="outline-2">
-<h2 id="867ded23">관련글</h2>
-<div class="outline-text-2" id="text-867ded23">
+<div id="outline-container-73ec6cea" class="outline-2">
+<h2 id="73ec6cea">주제별 내용</h2>
+<div class="outline-text-2" id="text-73ec6cea">
 <ul class="org-ul">
 <li><a href="doom-emacs-shortcuts.html">Doom Emacs 단축키</a></li>
 <li><a href="doom-emacs-troubleshooting.html">Doom Emacs 문제 해결</a></li>
@@ -341,6 +341,13 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs-shortcuts.html">Doom Emacs 단축키</a></h2>
@@ -381,13 +388,6 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 <h2><a class="article-link-title" href="/note/vim.html">Vim</a></h2>
 <div class="article-link-date">
 2020년 6월 3일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
-<div class="article-link-date">
-2020년 5월 29일 수정</div>
 </div>
 </div>
 <div class="article-link">
