--- a/note/git.html
+++ b/note/git.html
@@ -55,12 +55,12 @@
 <section class="content">
 <header>
 <h1>Git</h1>
-<div class="title-date">2020년 6월 23일 수정</div>
+<div class="title-date">2020년 6월 26일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#867ded23">관련글</a></li>
+<li><a href="#73ec6cea">주제별 내용</a></li>
 <li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
@@ -71,9 +71,9 @@ Git은 현존하는 가장 대표적인 DVCS(Distributed Version Control System)
 파일의 변경 내역을 추적 및 관리하는데 사용하는 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-867ded23" class="outline-2">
-<h2 id="867ded23">관련글</h2>
-<div class="outline-text-2" id="text-867ded23">
+<div id="outline-container-73ec6cea" class="outline-2">
+<h2 id="73ec6cea">주제별 내용</h2>
+<div class="outline-text-2" id="text-73ec6cea">
 <ul class="org-ul">
 <li><a href="git-basic-usage.html">Git 일반적인 사용법</a></li>
 <li><a href="git-special-usage.html">Git 약간 특별한 사용법</a></li>
@@ -107,9 +107,16 @@ Git은 현존하는 가장 대표적인 DVCS(Distributed Version Control System)
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/git-special-usage.html">Git 약간 특별한 사용법</a></h2>
 <div class="article-link-date">
-2020년 6월 23일 수정</div>
+2020년 6월 25일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -131,13 +138,6 @@ Git은 현존하는 가장 대표적인 DVCS(Distributed Version Control System)
 <h2><a class="article-link-title" href="/note/cargo.html">Cargo</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
-<div class="article-link-date">
-2020년 6월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
