--- a/note/index.html
+++ b/note/index.html
@@ -56,14 +56,63 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-file-dir-tips.html">Python으로 파일의 경로 및 목록 다루기</a></h2>
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <div class="article-link-date">
-2020년 6월 25일 수정</div>
+2020년 6월 26일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/wwdc.html">WWDC</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rsync.html">rsync</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-syntax.html">Org 문법 정리</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-file-dir-tips.html">Python으로 파일의 경로 및 목록 다루기</a></h2>
 <div class="article-link-date">
 2020년 6월 25일 수정</div>
 </div>
@@ -92,13 +141,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
-<div class="article-link-date">
-2020년 6월 24일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/wwdc.html">WWDC</a></h2>
 <div class="article-link-date">
 2020년 6월 24일 수정</div>
 </div>
@@ -134,20 +176,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/sync-dirs-with-rsync.html">rsync로 두 디렉터리 동기화하기</a></h2>
-<div class="article-link-date">
-2020년 6월 23일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rsync.html">rsync</a></h2>
-<div class="article-link-date">
-2020년 6월 23일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
 </div>
@@ -190,13 +218,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/x86.html">x86</a></h2>
-<div class="article-link-date">
-2020년 6월 23일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
 </div>
@@ -339,13 +360,6 @@
 <h2><a class="article-link-title" href="/note/doom-emacs-shortcuts.html">Doom Emacs 단축키</a></h2>
 <div class="article-link-date">
 2020년 6월 20일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
-<div class="article-link-date">
-2020년 6월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -542,13 +556,6 @@
 <h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
 <div class="article-link-date">
 2020년 5월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
-<div class="article-link-date">
-2020년 5월 29일 수정</div>
 </div>
 </div>
 <div class="article-link">
