--- a/note/xcode.html
+++ b/note/xcode.html
@@ -55,12 +55,12 @@
 <section class="content">
 <header>
 <h1>Xcode</h1>
-<div class="title-date">2020년 6월 23일 수정</div>
+<div class="title-date">2020년 6월 26일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#867ded23">관련글</a></li>
+<li><a href="#73ec6cea">주제별 내용</a></li>
 <li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
@@ -69,9 +69,9 @@
 Xcode는 <a href="apple.html">애플</a> 플랫폼 용 소프트웨어를 개발할 때 사용하는 개발 도구 겸 IDE다. 무겁고 잘 죽는 연약한 도구지만 어쩔 수 없이 써야만 한다. 그래도 이런 만능 도구가 무료라는 게 어디인가.
 </p>
 
-<div id="outline-container-867ded23" class="outline-2">
-<h2 id="867ded23">관련글</h2>
-<div class="outline-text-2" id="text-867ded23">
+<div id="outline-container-73ec6cea" class="outline-2">
+<h2 id="73ec6cea">주제별 내용</h2>
+<div class="outline-text-2" id="text-73ec6cea">
 <ul class="org-ul">
 <li><a href="xcode-tips.html">Xcode 팁 모음</a></li>
 </ul>
@@ -102,7 +102,7 @@ Xcode는 <a href="apple.html">애플</a> 플랫폼 용 소프트웨어를 개발
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <div class="article-link-date">
-2020년 6월 24일 수정</div>
+2020년 6월 25일 수정</div>
 </div>
 </div>
 <div class="article-link">
