--- a/note/rsync.html
+++ b/note/rsync.html
@@ -55,12 +55,12 @@
 <section class="content">
 <header>
 <h1>rsync</h1>
-<div class="title-date">2020년 6월 23일 수정</div>
+<div class="title-date">2020년 6월 26일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#867ded23">관련글</a></li>
+<li><a href="#73ec6cea">주제별 내용</a></li>
 </ul>
 </div>
 </div>
@@ -76,9 +76,9 @@ rsync는 remote sync의 약자로 두 원격지의 디렉터리를 동기화 하
 리눅스를 비롯한 <code>*NIX</code> 운영체제에서 대체로 기본 제공되며 <a href="macos.html">macOS</a>에서도 별 다른 설치 없이 사용할 수 있다.
 </p>
 
-<div id="outline-container-867ded23" class="outline-2">
-<h2 id="867ded23">관련글</h2>
-<div class="outline-text-2" id="text-867ded23">
+<div id="outline-container-73ec6cea" class="outline-2">
+<h2 id="73ec6cea">주제별 내용</h2>
+<div class="outline-text-2" id="text-73ec6cea">
 <ul class="org-ul">
 <li><a href="sync-dirs-with-rsync.html">rsync로 두 디렉터리 동기화하기</a></li>
 </ul>
