--- a/note/wwdc.html
+++ b/note/wwdc.html
@@ -55,12 +55,12 @@
 <section class="content">
 <header>
 <h1>WWDC</h1>
-<div class="title-date">2020년 6월 24일 수정</div>
+<div class="title-date">2020년 6월 26일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#867ded23">관련글</a></li>
+<li><a href="#73ec6cea">주제별 내용</a></li>
 </ul>
 </div>
 </div>
@@ -76,9 +76,9 @@ WWDC는 <a href="apple.html">애플</a>에서 개최하는 World Wide Developer 
 이 외의 발표들은 대부분 개발자들을 위한 전문적인 내용들이라 기자들에게 소외(?)를 당하지만 역시 개발자들에게는 알짜베기 발표가 많다.
 </p>
 
-<div id="outline-container-867ded23" class="outline-2">
-<h2 id="867ded23">관련글</h2>
-<div class="outline-text-2" id="text-867ded23">
+<div id="outline-container-73ec6cea" class="outline-2">
+<h2 id="73ec6cea">주제별 내용</h2>
+<div class="outline-text-2" id="text-73ec6cea">
 <ul class="org-ul">
 <li><a href="wwdc2020.html">WWDC20</a> (2020)</li>
 </ul>
